--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
-    <meta name="description" content="Wyslie Portfolio" />
-    <meta name="author" content="Wyslie" />
+    <title>Wyslie Van Basa - Portfolio</title>
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-</html>
+</html> 
